[tool.poetry]
name = "HILO-MPC"
description = "HILO-MPC is a toolbox for easy, flexible and fast development of machine-learning-supported optimal control and estimation problems"
version = "1.1.0"
authors = ["Johannes Pohlodek", "Bruno Morabito", "Christian Schlauch", "Pablo Zometa", "Rolf Findeisen"]
maintainers = ["HILO-MPC Developers"]
license = "LGPL-3.0"
readme = "README.md"
homepage = "https://www.ccps.tu-darmstadt.de/research_ccps/hilo_mpc/"
repository = "https://github.com/hilo-mpc/hilo_mpc"
documentation = "https://hilo-mpc.github.io/hilo-mpc/"
keywords = ["machine-learning", "neural-networks", "gaussian-processes", "hybrid-modeling", "model-based-optimization",
    "model-predictive-control", "mpc", "trajectory-tracking-mpc", "path-following-mpc", "moving-horizon-estimation",
    "mhe", "lqr", "pid", "kalman-filters", "particle-filters"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = ">=3.7"
casadi = ">=3.5"
numpy = "*"
scipy = "*"
prettytable = "*"

[tool.poetry.dev-dependencies]
setuptools = ">=42"
setuptools_scm = {extras = ["toml"], version = ">=6.2"}
wheel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
